# Rag-Evaluation-Pipeline

./: .gitignore  README.md  pyproject.toml  rag_pipeline.py  requirements.txt
configs/: prompt.yaml
data/evaluation/: evaluation_dataset.json
model/: evaluation_response_model.py  result_model.py  retriever_response_model.py
scripts/: data_ingestion.py  evaluation_script.py
src/: chroma_db.py  chunking_manager.py  document_ingestion.py  embedding_manager.py  evaluator.py  generation.py  retriever.py
src/generation/: generation.py
src/ingestion/: document_ingestion.py
src/pipeline/: rag_pipeline.py
src/processing/: chunking_manager.py
src/retrieval/: retriever.py
src/vector_database/: chroma_db.py
ui/: app.py
